@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2004/09/23 09:59:06 agc Exp $
+# $NetBSD: Makefile,v 1.23 2004/11/04 19:49:24 jdolecek Exp $
 #
 
 COMMENT=	Collections of other packages
@@ -16,6 +16,9 @@ SUBDIR+=	gtk2-extras
 SUBDIR+=	kde3
 SUBDIR+=	netbsd-doc
 SUBDIR+=	netbsd-doc-print
+SUBDIR+=	netbsd-www
+SUBDIR+=	php4-extensions
+SUBDIR+=	php5-extensions
 SUBDIR+=	netbsd-www
 SUBDIR+=	suse9
 SUBDIR+=	web-server
